// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AdminConsole/CustomEnableDisableGuestAccountsSetting initial state with false 1`] = `
<Fragment>
  <BooleanSetting
    disabled={false}
    falseText={
      <FormattedMessage
        defaultMessage="false"
        id="admin.false"
        values={Object {}}
      />
    }
    helpText={
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="When true, external guest can be invited to channels within teams. Please see [Permissions Schemes](../user_management/permissions/system_scheme) for which roles can invite guests."
        id="admin.guest_access.enableDescription"
      />
    }
    id="MySetting"
    label={
      <FormattedMessage
        defaultMessage="Enable Guest Access: "
        id="admin.guest_access.enableTitle"
        values={Object {}}
      />
    }
    onChange={[Function]}
    setByEnv={false}
    trueText={
      <FormattedMessage
        defaultMessage="true"
        id="admin.true"
        values={Object {}}
      />
    }
    value={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Disable Guest Access"
        id="admin.guest_access.disableConfirmButton"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="Disabling guest access will revoke all current Guest Account sessions. Guests will no longer be able to login and new guests cannot be invited into Mattermost. Guest users will be marked as inactive in user lists. Enabling this feature will not reinstate previous guest accounts."
        id="admin.guest_access.disableConfirmMessage"
        values={Object {}}
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Disable Guest Access?"
        id="admin.guest_access.disableConfirmTitle"
        values={Object {}}
      />
    }
  />
</Fragment>
`;

exports[`components/AdminConsole/CustomEnableDisableGuestAccountsSetting initial state with true 1`] = `
<Fragment>
  <BooleanSetting
    disabled={false}
    falseText={
      <FormattedMessage
        defaultMessage="false"
        id="admin.false"
        values={Object {}}
      />
    }
    helpText={
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="When true, external guest can be invited to channels within teams. Please see [Permissions Schemes](../user_management/permissions/system_scheme) for which roles can invite guests."
        id="admin.guest_access.enableDescription"
      />
    }
    id="MySetting"
    label={
      <FormattedMessage
        defaultMessage="Enable Guest Access: "
        id="admin.guest_access.enableTitle"
        values={Object {}}
      />
    }
    onChange={[Function]}
    setByEnv={false}
    trueText={
      <FormattedMessage
        defaultMessage="true"
        id="admin.true"
        values={Object {}}
      />
    }
    value={true}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Disable Guest Access"
        id="admin.guest_access.disableConfirmButton"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="Disabling guest access will revoke all current Guest Account sessions. Guests will no longer be able to login and new guests cannot be invited into Mattermost. Guest users will be marked as inactive in user lists. Enabling this feature will not reinstate previous guest accounts."
        id="admin.guest_access.disableConfirmMessage"
        values={Object {}}
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Disable Guest Access?"
        id="admin.guest_access.disableConfirmTitle"
        values={Object {}}
      />
    }
  />
</Fragment>
`;
